# ccargus

./: .mise.toml  Cargo.toml  README.md  config.example.toml  deny.toml
.github/workflows/: cd.yml  ci.yml
Formula/: ccargus.rb
docs/: concept.md  terminology.md
docs/plans/: 2026-03-08-cicd-design.md  2026-03-08-prototype.md  2026-03-08-rename-session-to-worktree.md
src/: action.rs  app.rs  config.rs  context.rs  copy_mode.rs  event.rs  keys.rs  layout.rs  main.rs  renderer.rs  tui.rs
src/components/: confirm_dialog.rs  editor_float.rs  help_overlay.rs  mod.rs  qa_selector.rs  repo_selector.rs  session_tree.rs  status_line.rs  terminal_pane.rs  utils.rs  worktree_tree.rs
src/domain/: claude_status.rs  git.rs  mod.rs  pty.rs  repo.rs  session.rs  tmux.rs  worktree.rs  worktree_entry.rs  worktree_manager.rs
src/handler/: copy_mode.rs  mod.rs  mouse.rs  scroll.rs  terminal.rs  worktrees.rs
